--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-aria": "^1.5.8",
     "angular-material": "^1.0.9",
     "socket.io": "^1.4.8",
-    "sails.io.js": "^0.13.8"
+    "sails.io.js": "^0.13.8",
+    "angular-spinner": "^0.8.1"
   },
   "name": "app",
   "version": "0.0.0",
